Selected stories for Writing page

--- a/Home.html
+++ b/Home.html
@@ -32,13 +32,13 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Adam Martin</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Welcome to the compilation of my lifes work, get cozy.</h2>
-                        <a class="btn btn-primary" href="#about">Get Started</a>
+                        <a class="btn btn-primary" href="#start">Get Started</a>
                     </div>
                 </div>
             </div>
         </header>
         <!-- About-->
-        <section class="about-section text-center" id="about">
+        <section class="about-section text-center" id="start">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
