--- a/Photography.html
+++ b/Photography.html
@@ -33,13 +33,13 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Photography</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Frames of a beautiful world.</h2>
-                        <a class="btn btn-primary" href="#software">Browse</a>
+                        <a class="btn btn-primary" href="#start">Browse</a>
                     </div>
                 </div>
             </div>
         </header>
         <!-- Page content-->
-        <div class="container" id="software">
+        <div class="container" id="start">
             <div class="row justify-content-center">
                 <!-- Blog entries-->
                 <div class="col-lg-8 my-4">
