--- a/Writing.html
+++ b/Writing.html
@@ -33,13 +33,13 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Writing</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">All stories carry with them a piece of its creator and the world they seek to create.</h2>
-                        <a class="btn btn-primary" href="#software">Browse</a>
+                        <a class="btn btn-primary" href="#start">Browse</a>
                     </div>
                 </div>
             </div>
         </header>
         <!-- Page content-->
-        <div class="container" id="software">
+        <div class="container" id="start">
             <div class="row justify-content-center">
                 <!-- Blog entries-->
                 <div class="col-lg-8 my-4">
@@ -47,7 +47,7 @@
                     <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="../assets/houston.jpg" alt="ODU REU Team" /></a>
                         <div class="card-body">
-                            <div class="small text-muted">Spring 2022</div>
+                            <div class="small text-muted">Spring 2022 - Short Story</div>
                             <h2 class="card-title">One Shot to Houston</h2>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
                             <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
@@ -59,10 +59,10 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="../assets/botlogo.png" alt="..." /></a>
+                                <a href="#!"><img class="card-img-top" src="../assets/older_small.png" alt="..." /></a>
                                 <div class="card-body">
-                                    <div class="small text-muted">Summer 2020</div>
-                                    <h2 class="card-title h4">Police Brutality Bot</h2>
+                                    <div class="small text-muted">Fall 2016 - Poetry</div>
+                                    <h2 class="card-title h4">Growing Older</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                                     <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
                                 </div>
@@ -71,10 +71,10 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="../assets/facialrec.png" alt="..." /></a>
+                                <a href="#!"><img class="card-img-top" src="../assets/bliss_small.png" alt="..." /></a>
                                 <div class="card-body">
-                                    <div class="small text-muted">Summer 2021</div>
-                                    <h2 class="card-title h4">Facial Recognition</h2>
+                                    <div class="small text-muted">Fall 2022 - Analysis</div>
+                                    <h2 class="card-title h4">Consumption Symbiosis</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                                     <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
                                 </div>
