--- a/Photography.html
+++ b/Photography.html
@@ -51,7 +51,7 @@
                             alt="Boat on Calm Water"
                             id="banner"
                         />
-                        <div id="myModal" class="modal" tabindex="-1" role="dialog">
+                        <div id="myModal" class="modal modal-blur" tabindex="-1" role="dialog">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-body">
