--- a/Photography.html
+++ b/Photography.html
@@ -49,9 +49,9 @@
                                 src="./assets/banner.png"
                                 class="w-100 shadow-1-strong rounded mb-4"
                                 alt="Boat on Calm Water"
-                                id="preview"
+                                id="preview1"
                             />
-                            <div id="modal" class="modal modal-blur" tabindex="-1" role="dialog">
+                            <div id="modal1" class="modal modal-blur" tabindex="-1" role="dialog">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-body">
@@ -66,7 +66,7 @@
                                             <h4 style="font-style:italic">Sample date</h4>
                                             <p>A brief but detailed description of the photograph.</p>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button close" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary modal-button" id="close1" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -76,9 +76,9 @@
                                 src="./assets/bliss.png"
                                 class="w-100 shadow-1-strong rounded mb-4"
                                 alt="Wintry Mountain Landscape"
-                                id="preview"
+                                id="preview2"
                             />
-                            <div id="myModal" class="modal modal-blur" tabindex="-1" role="dialog">
+                            <div id="modal2" class="modal modal-blur" tabindex="-1" role="dialog">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-body">
@@ -93,7 +93,7 @@
                                             <h4 style="font-style:italic">Sample date</h4>
                                             <p>A brief but detailed description of the photograph.</p>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button close" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary modal-button" id="close2" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -105,9 +105,9 @@
                                 src="./assets/feelings.png"
                                 class="w-100 shadow-1-strong rounded mb-4"
                                 alt="Mountains in the Clouds"
-                                id="preview"
+                                id="preview3"
                             />
-                            <div id="myModal" class="modal modal-blur" tabindex="-1" role="dialog">
+                            <div id="modal3" class="modal modal-blur" tabindex="-1" role="dialog">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-body">
@@ -122,7 +122,7 @@
                                             <h4 style="font-style:italic">Sample date</h4>
                                             <p>A brief but detailed description of the photograph.</p>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button close" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary modal-button" id="close3" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -132,9 +132,9 @@
                                 src="./assets/listening.png"
                                 class="w-100 shadow-1-strong rounded mb-4"
                                 alt="Boat on Calm Water"
-                                id="preview"
+                                id="preview4"
                             />
-                            <div id="myModal" class="modal modal-blur" tabindex="-1" role="dialog">
+                            <div id="modal4" class="modal modal-blur" tabindex="-1" role="dialog">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-body">
@@ -149,7 +149,7 @@
                                             <h4 style="font-style:italic">Sample date</h4>
                                             <p>A brief but detailed description of the photograph.</p>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button close" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary modal-button" id="close4" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -161,9 +161,9 @@
                                 src="./assets/riverPerspective.jpg"
                                 class="w-100 shadow-1-strong rounded mb-4"
                                 alt="Waves at Sea"
-                                id="preview"
+                                id="preview5"
                             />
-                            <div id="myModal" class="modal modal-blur" tabindex="-1" role="dialog">
+                            <div id="modal5" class="modal modal-blur" tabindex="-1" role="dialog">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-body">
@@ -178,7 +178,7 @@
                                             <h4 style="font-style:italic">Sample date</h4>
                                             <p>A brief but detailed description of the photograph.</p>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button close" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary modal-button" id="close5" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -188,9 +188,9 @@
                                 src="./assets/writer.jpg"
                                 class="w-100 shadow-1-strong rounded mb-4"
                                 alt="Yosemite National Park"
-                                id="preview"
+                                id="preview6"
                             />
-                            <div id="myModal" class="modal modal-blur" tabindex="-1" role="dialog">
+                            <div id="modal6" class="modal modal-blur" tabindex="-1" role="dialog">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-body">
@@ -205,7 +205,7 @@
                                             <h4 style="font-style:italic">Sample date</h4>
                                             <p>A brief but detailed description of the photograph.</p>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button close" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary modal-button" id="close6" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
