--- a/Photography.html
+++ b/Photography.html
@@ -43,6 +43,7 @@
             <div class="row justify-content-center">
                 <section class="my-4">
                     <!-- Gallery -->
+                    <!-- Large vertical images need to be reformatted to 4:3 for expanded view -->
                     <div class="row">
                         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                             <img
@@ -83,7 +84,7 @@
                                     <div class="modal-content">
                                         <div class="modal-body">
                                             <img 
-                                                src="./assets/bliss.png"
+                                                src="./assets/bliss_fixed.png"
                                                 width="100%"
                                                 height="100%"
                                             />
