Added winning font/colors and resume

--- a/Photography.html
+++ b/Photography.html
@@ -67,7 +67,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/banner.png" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close1" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close1" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -94,7 +94,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/bliss.png" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close2" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close2" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Asphalt_Rain.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close7" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close7" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -148,7 +148,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Lost_in_Ontario.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close8" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close8" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -175,7 +175,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Philistine.png" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close9" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close9" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -202,7 +202,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Ledges.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close10" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close10" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -231,7 +231,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/feelings.png" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close3" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close3" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -258,7 +258,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/listening.png" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close4" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close4" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -285,7 +285,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Calebs_Not_Here.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close11" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close11" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -312,7 +312,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Edison_Bulb_in_a_Coffee_Shop.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close12" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close12" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -339,7 +339,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Hotel_New_Orleans.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close13" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close13" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -366,7 +366,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Lincoln_Street.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close18" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close18" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -395,7 +395,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/riverPerspective.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close5" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close5" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -422,7 +422,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/writer.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close6" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close6" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -449,7 +449,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/chef.png" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close14" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close14" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -476,7 +476,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Concrete_Spaces.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close15" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close15" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -503,7 +503,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Hut_in_Green.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close16" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close16" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -530,7 +530,7 @@
                                             <p>A brief but detailed description of the photograph.</p>
                                             <a href="./assets/Nashville_Lights.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
-                                            <button type="button" class="btn btn-secondary modal-button" id="close17" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary modal-button" id="close17" data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
