--- a/Writing.html
+++ b/Writing.html
@@ -96,7 +96,7 @@
                                 </svg>
                                 <h4 class="text-uppercase m-0">GitHub</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a target="_blank" href="https://github.com/adammartin13">github.com/adammartin13</a></div>
+                                <div class="small card-text"><a target="_blank" href="https://github.com/adammartin13">github.com/adammartin13</a></div>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">cadamm@iastate.edu</div>
+                                <div class="small card-text">cadamm@iastate.edu</div>
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Download Resume</h4>
                                 <hr class="my-4 mx-auto" />
-                                <a href="./Resume.pdf" target="_blank" class="small text-black-50">Download</a>
+                                <a href="./Resume.pdf" target="_blank" class="small card-text">Download</a>
                             </div>
                         </div>
                     </div>
