--- a/Home.html
+++ b/Home.html
@@ -30,8 +30,8 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Adam Martin</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Welcome to the compilation of my lifes work, get cozy.</h2>
-                        <a class="btn btn-primary" href="#start">Get Started</a>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Welcome to the compilation of my lifes work.</h2>
+                        <a class="btn btn-primary" href="#start">Browse</a>
                     </div>
                 </div>
             </div>
@@ -43,9 +43,9 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">
-                            I'm a Software Developer from South Carolina born and raised. I explore the world, write stories on its beautiful
-                            nuances, and hope to photograph the whole journey. In everything we create we put into it a little piece of us. I hope
-                            you find in my work not only value, but signs of the person who crafted it.
+                            I'm a software developer, writer, and photographer from South Carolina born and raised. I love exploring the world, writing stories on its beautiful
+                            nuances, and hope to photograph the whole journey. In everything we create we put into it a little piece of us.
+                            I hope here you'll find both value and magnanimity in my lifes work.
                         </p>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                         <div class="featured-text text-center text-lg-left">
                             <h4>Software Developer</h4>
                             <p class="text-black-50 mb-0">From my talent and career I'm creating applications for the betterment of others such as 
-                                a Twitter bot designed to collect instances of Police Brutality and a large language
+                                a Twitter bot designed to collect instances of police brutality and a large language
                                 model for detecting instances of Russian disinformation as it pertains to the war in Ukraine.
                             </p>
                         </div>
