--- a/Writing.html
+++ b/Writing.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Software</title>
+        <title>Writing</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -32,7 +32,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Writing</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">All stories carry with them a piece of its creator and the world they seek to create.</h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A story is drafted at the authors convenience, but it is written when lived.</h2>
                         <a class="btn btn-primary" href="#start">Browse</a>
                     </div>
                 </div>
