Added photo card descriptions

--- a/Photography.html
+++ b/Photography.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Software</title>
+        <title>Photography</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -64,7 +64,12 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Retro Computing</h3>
                                             <h4 style="font-style:italic">Fall 2024</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                I found this Limited Edition 1986 Apple IIGS down in a dumpster destined for destruction, so
+                                                jumping into the bin and tossing it into the truck home felt like the right thing to do. One PSU
+                                                replacement and some second hand OS floppys later and I have a dedicated DOS machine. One day I hope
+                                                to use this to experiment with COBOL.
+                                            </p>
                                             <a href="./assets/banner.png" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close1" data-dismiss="modal">Close</button>
@@ -91,7 +96,15 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Bliss</h3>
                                             <h4 style="font-style:italic">Spring 2024</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                Black and white film. Self developed.
+                                            </p>
+                                            <p>
+                                                A man in a suit drops change in a cup before a power plant, its pollution driving the climate
+                                                in a direction that will command him to the same fate. The viewers perspective focused
+                                                solely on the change in frame, its temporary benefaction rendered still, with the plant out of 
+                                                focus.
+                                            </p>
                                             <a href="./assets/bliss.png" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close2" data-dismiss="modal">Close</button>
@@ -118,7 +131,11 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Asphalt Rain</h3>
                                             <h4 style="font-style:italic">Fall 2023</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                I love the high contrast between lights and the night sky, its tones almost amplified following a
+                                                light rain where I can pick up these colors in the moisture and puddles. The asphalt adds a
+                                                second dark vector to compliment the dark sky.
+                                            </p>
                                             <a href="./assets/Asphalt_Rain.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close7" data-dismiss="modal">Close</button>
@@ -145,7 +162,15 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Lost in Ontario</h3>
                                             <h4 style="font-style:italic">Summer 2023</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                My first time in Canada my friend Luke and I went on a hike by the Niagara escarpment.
+                                                The bold rocky faces were beautiful and of the photos I shot I loved the running water,
+                                                vibrant greenery, and the glistening rainbow I was able to capture here.
+                                            </p>
+                                            <p>
+                                                We fell off the trail and got lost on the hike home, but for views like this I look
+                                                forward to getting lost again.
+                                            </p>
                                             <a href="./assets/Lost_in_Ontario.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close8" data-dismiss="modal">Close</button>
