Updating website icon

--- a/Photography.html
+++ b/Photography.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Photography</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -197,7 +197,12 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Philistine</h3>
                                             <h4 style="font-style:italic">Spring 2024</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>Black and white film. Self developed.</p>
+                                            <p>
+                                                I find that in modern education we have exchanged the pursuit of knowledge for monetary
+                                                gain. This piece was inspired by the concept of acquiring a degree for money or a job for
+                                                the sake of money. The desire for enlightenment absent in the face of greed.
+                                            </p>
                                             <a href="./assets/Philistine.png" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close9" data-dismiss="modal">Close</button>
@@ -224,7 +229,12 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Ledges</h3>
                                             <h4 style="font-style:italic">Summer 2024</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                I had no idea that this beautiful state park was just down the road from my university
+                                                until my last year there. I spent an entire day hiking along the rocks and streams and found
+                                                this gorgeous view on the side of the road trecking back to my car. I love the vibrant green,
+                                                mystic blue skies, and solar rays peaking through the tree tops.
+                                            </p>
                                             <a href="./assets/Ledges.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close10" data-dismiss="modal">Close</button>
